crates/arky-tools-macros/tests/ui/non_async.stderr
error: #[tool] can only be applied to async functions
 --> tests/ui/non_async.rs:5:1
  |
5 | fn not_async() -> Result<(), arky_tools::ToolError> {
  | ^^
